# resram.rust

./: .gitignore  FSRSanalysis_v2.ipynb  README.md  benchmark_resram.py  compare_backends.py  compare_cross_sections.py  fit_resram_python.py  fit_resram_rust.py  inp.toml  package-lock.json  package.json  pyproject.toml  resram_core.py  test.ipynb  test_load.py  test_resram.py  test_resram_standalone.py
.github/workflows/: cli-build.yml  gui-build.yml  rust_release.yml
best_fit/: inp.txt  inp_old.txt  loss_list
docs/superpowers/plans/: 2026-04-07-tauri-port-implementation.md
docs/superpowers/specs/: 2026-04-07-tauri-port-design.md
example/: fit.toml  inp.toml
fabricated_optimizer_dataset/: README_TEST_DATASET.md  inp.toml  inp.txt
resram_rust/: Cargo.toml  inp.txt
resram_rust/src/: config.rs  core.rs  lib.rs  models.rs  optimizer.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
