[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resram_core"
version = "0.1.0"
description = "Resonance Raman (ResRAM) Core for spectroscopic analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Likun Cai", email = "kentclk@outlook.com" }
]
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.10.7",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["resram_core.py"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.15",
    "pytest>=8.0.0",
]
